--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
       <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
 
       <label for="whatsapp">WhatsApp</label>
-      <input type="tel" id="whatsapp" name="whatsapp" placeholder="(00) 00000-0000" required>
+      <input type="tel" id="cpf" name="cpf" placeholder="000.000.000-00" required>
 
       <div class="checkbox">
         <input type="checkbox" id="optin" name="optin" required>
         <label for="optin">
-          Autorizo o contato via WhatsApp para análise gratuita do meu benefício, conforme a política de privacidade.
+          Autorizo o contato via WhatsApp e a ultilização do meu cpf para análise gratuita do meu benefício, conforme a política de privacidade.
         </label>
       </div>
 
