--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <label for="nome">Nome completo</label>
       <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
 
-      <label for="whatsapp">WhatsApp</label>
+      <label for="cpf">cpf</label>
       <input type="tel" id="cpf" name="cpf" placeholder="000.000.000-00" required>
 
       <div class="checkbox">
@@ -131,7 +131,7 @@
       const numeroDestino = '5547991959797'; // Ex: 5547999999999
       const mensagem = `Olá, tudo bem?%0A%0AVocê solicitou uma análise gratuita do seu benefício através do nosso site.%0A%0APosso te ajudar agora?`;
 
-      const url = `https://wa.me/${numeroDestino}?text=${mensagem}`;
+      const url = `https://wa.me/${5547991959797}?text=${olá sou Aposentado, quero mais informações}`;
       window.location.href = url;
       return false;
     }
